add profile user

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -147,3 +147,7 @@ body {
   color: #b0b0b0 !important; /* Original color for light mode */
   opacity: 1 !important;
 }
+
+.avatar-user{
+  border: transparent !important;
+}
