--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
   --primary-color: #ff204e;
   --secondary-color: #f5f5f5;
   --gradient-background: linear-gradient(135deg, #f8f8ff, #e9efff);
+  --ink-bar-color: #000000;
+  --custom-btn2: #f5f5f5;
 }
 
 [data-theme="dark"] {
@@ -14,6 +16,8 @@
   --primary-color: #ff204e;
   --secondary-color: #333333;
   --gradient-background: linear-gradient(135deg, #1e1e1e, #121212);
+  --ink-bar-color: #f5f5f5;
+  --custom-btn2: #555;
 }
 
 * {
@@ -81,6 +85,7 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  left: -10%;
 }
 
 .video-player {
@@ -104,8 +109,8 @@ body {
 
 #sidebar {
   width: 256px;
-  position: fixed;
-  height: 100%;
+  position: relative;
+  height: auto;
   z-index: 9;
   background-color: var(--background-color);
   margin-top: 5%;
@@ -148,6 +153,20 @@ body {
   opacity: 1 !important;
 }
 
-.avatar-user{
+.avatar-user {
   border: transparent !important;
+}
+
+.ant-card-body {
+  padding: 0 !important;
+}
+
+.ant-tabs-ink-bar {
+  position: absolute !important;
+  background: var(--ink-bar-color) !important;
+  pointer-events: none !important;
+}
+
+#custom-btn2 {
+  background: var(--custom-btn2) !important;
 }
