--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@ body {
 }
 
 .ant-menu-item-selected span {
-  color: var(--primary-color) !important; /* Selected text color */
+  color: var(--primary-color);
 }
 
 .ant-btn-primary {
@@ -110,6 +110,7 @@ body {
   opacity: 1;
 }
 
+/* ----------------------------Sidebar---------------------------- */
 #sidebar {
   width: 256px;
   position: relative;
@@ -134,6 +135,10 @@ body {
 /* Custom styles for sidebar items */
 .sidebar-menu-item {
   color: var(--text-color) !important;
+}
+
+.ant-menu-item-selected {
+  color: var(--primary-color) !important;
 }
 
 .sidebar-menu-item:hover {
@@ -209,7 +214,7 @@ body {
 /* Placeholder */
 
 ::placeholder {
-  color: var(--placeholder-color) !important; 
+  color: var(--placeholder-color) !important;
   opacity: 1;
 }
 
@@ -219,4 +224,79 @@ body {
 
 .ant-form-item-label > label {
   color: var(--text-color) !important;
+}
+
+/* -----------------------------------------------Mobile-----------------------------------------------*/
+
+.sidebar-mobile {
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+/* -----------------------------------------------Responsive-----------------------------------------------*/
+
+/* Media Query for Small Screens */
+@media (max-width: 450px) {
+  .login-page {
+    height: 700px !important;
+  }
+  .login-form {
+    width: 95% !important;
+    padding: 5% 10% !important;
+  }
+  .signup-page {
+    height: 700px !important;
+  }
+  .signup-form {
+    width: 90% !important;
+    height: 95% !important;
+    padding: 5% 10% !important;
+  }
+  .forgot-password-modal,
+  .otp-modal,
+  .reset-password-modal {
+    height: 400 !important;
+  }
+  .forgot-password-form,
+  .otp-form,
+  .reset-password-form {
+    height: 400 !important;
+  }
+  .home-content{
+    background-color: #000000 !important;
+  }
+  .video-container {
+    width: 100vw !important;
+    height: 87vh !important; /* Video chiếm toàn bộ chiều cao màn hình */
+    position: relative !important;
+    max-width: 100vw;
+    left: 0 !important; /* Đặt căn giữa */
+    bottom: 7% !important;
+    border-radius: 0 !important; /* Loại bỏ góc bo tròn */
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .video-player {
+    width: 100% !important;
+    height: 100% !important; /* Đảm bảo video lấp đầy toàn bộ container */
+    object-fit: cover !important; /* Video hiển thị đúng kích thước và giữ khung hình */
+    border-radius: 0 !important;
+    margin-top: 0 !important; /* Xóa khoảng cách thừa */
+  }
+
+  .video-info {
+    bottom: 0% !important; /* Căn chỉnh thông tin video */
+    left: 3% !important; /* Thêm khoảng cách bên trái */
+    font-size: 14px !important; /* Giảm kích thước chữ để phù hợp với màn hình nhỏ */
+    line-height: 1.2 !important; /* Điều chỉnh khoảng cách dòng */
+  }
+
+  .header-components,
+  #sidebar {
+    display: none !important;
+  }
 }
