--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@
   --text-color: #333333;
   --primary-color: #ff204e;
   --secondary-color: #f5f5f5;
-  --gradient-background: linear-gradient(135deg, #f8f8ff, #e9efff);
   --ink-bar-color: #000000;
   --custom-btn2: #f5f5f5;
   --placeholder-color: #12121274;
@@ -16,7 +15,6 @@
   --text-color: #f5f5f5;
   --primary-color: #ff204e;
   --secondary-color: #333333;
-  --gradient-background: linear-gradient(135deg, #1e1e1e, #121212);
   --ink-bar-color: #f5f5f5;
   --custom-btn2: #555;
   --placeholder-color: #f5f5f574;
@@ -29,7 +27,7 @@
 }
 
 body {
-  background: var(--gradient-background);
+  background: var(--background-color);
   color: var(--text-color);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -127,7 +125,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 18px;
-  background-color: var(--background-color);
+  background-color: transparent;
   border: none;
   margin-left: 5%;
 }
@@ -306,6 +304,20 @@ body {
     width: 100vw !important;
   }
 
-  /* Căn chỉnh profile card */
-  
+  .ant-modal-footer .ant-btn-default {
+    background-color: #f44336 !important; /* Đổi màu nền của nút Cancel */
+    color: white !important; /* Màu chữ */
+    font-weight: 600;
+    border-radius: 4px;
+  }
+
+  .ant-modal-footer .ant-btn-default:hover {
+    background-color: #d32f2f !important; /* Màu nền khi hover */
+  }
+
+  .ant-modal-close-x {
+    color: #000; /* Màu của dấu "x" đóng modal */
+    font-size: 18px;
+  }
+
 }
